name:                heaviest-balanced-subsequence
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/matthias.goergens/heaviest-balanced-subsequence#readme
license:             BSD3
license-file:        LICENSE
author:              Matthias Görgens
maintainer:          matthias.goergens@gmail.com
copyright:           All rights reserved.
category:            experimental
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Linear
  default-extensions:  DeriveFunctor, DeriveGeneric, DeriveFoldable, DeriveTraversable, ViewPatterns, ScopedTypeVariables, PartialTypeSignatures, TupleSections, TypeSynonymInstances, FlexibleInstances, MultiParamTypeClasses
  build-depends:       base >= 4.7 && < 5
                     , heaps
                     , bifunctors >= 5.4
                     , containers >= 0.5.7
  default-language:    Haskell2010

executable heaviest-balanced-subsequence-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , heaviest-balanced-subsequence
  default-language:    Haskell2010

test-suite heaviest-balanced-subsequence-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , heaviest-balanced-subsequence
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matthias.goergens/heaviest-balanced-subsequence
